Thu Dec  8 23:06:24 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/portico_ccm.mpb:
        * MPC/config/portico_ccm_skel.mpb:
        * MPC/config/portico_ccm_stub.mpb:

          Base project for the Portico implementation of HLA.

Wed Dec  7 04:10:40 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/iCCM/templates/cpp/ccm/CCM.mpc.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_EventConsumer.cpp.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_EventConsumer.h.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_EventConsumer.inl.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher.cpp.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher.h.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher.inl.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher_Table.cpp.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher_Table.h.tmpl:
        * bin/iCCM/templates/cpp/ccm/CCM_Publisher_Table.inl.tmpl:

          Added templates for generating the default EventConsumer, Publisher,
          and Publisher_Table object for a new architecture.

        * examples/portico/ExampleCPPFederate.h:
        * examples/portico/ExampleCPPFederate.cpp:
        * examples/portico/ExampleFedAmb.h:
        * examples/portico/main.cpp:

          Cleaned up the code.

Tue Dec  6 03:24:15 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/iCCM/templates/cpp/CCM.mwc.tmpl:

          Fixed error in generated workspace.

        * bin/iCCM/templates/cpp/ccm/CCM.mpc.tmpl:
        * bin/iCCM/templates/cpp/ccm/Events.idl.tmpl:

          Added the Event.idl template file to the project.

Tue Dec  6 01:12:13 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * examples/portico:
        * examples/portico/ExampleCPPFederate.h:
        * examples/portico/ExampleCPPFederate.cpp:
        * examples/portico/ExampleFedAmb.h:
        * examples/portico/ExampleFedAmb.cpp:
        * examples/portico/example.mpc: