@@ -2,7 +2,7 @@
 // $Id$
 
 /**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.8.3
+ * Code generated by the The ACE ORB (TAO) IDL Compiler v2.0.5
  * TAO and the TAO IDL Compiler have been developed by:
  *       Center for Distributed Object Computing
  *       Washington University
@@ -25,8 +25,8 @@
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
 
-#ifndef _CIAO_HELLOWORLDE_B4GNTH_IDL_
-#define _CIAO_HELLOWORLDE_B4GNTH_IDL_
+#ifndef _CIAO_HELLOWORLDE_JA11GB_IDL_
+#define _CIAO_HELLOWORLDE_JA11GB_IDL_
 
 
 #include "ccm/CCM_Events.idl"
