@@ -50,6 +50,8 @@ namespace HelloWorldImpl
   //
   void HelloWorld::message (const char * message)
   {
+    ACE_OS::sleep (15);
+
     this->message_ = message;
   }
 
